--- a/style.css
+++ b/style.css
@@ -3,19 +3,21 @@ body {
   background-image: url('./assets/stars.gif');
   background-size: cover;
   color: white;
+  overflow: auto;
 }
 
 .logo {
-  position: absolute;
+  position: fixed;
   right: 50px;
 }
 main {
-  padding: 100px;
+  padding-top: 60px;
+  padding-left: 100px;
 }
 .show {
   align-items: center;
   appearance: none;
-  background-color: #fff;
+  background-color: #f5fab5;
   border-radius: 12px;
   color: #3c4043;
   cursor: pointer;
@@ -53,6 +55,8 @@ main {
   border: 0.5px dotted white;
   border-radius: 8px;
   padding: 10px 20px;
+  background-color: #174ea63a;
+  margin-bottom: 3px;
 }
 .person:hover {
   cursor: pointer;
@@ -139,7 +143,7 @@ table td {
 .pagination-btn {
   margin-right: 15px;
   margin-bottom: 20px;
-  background: linear-gradient(to bottom right, #ef4765, #ff9a5a);
+  background: linear-gradient(to bottom right, #49808a, #215a3f);
   border: 0;
   border-radius: 12px;
   color: #ffffff;
